ghi/nop_LBM_handleInOutFlow
lbm.c:282:7: error: expected ';' after expression
  uint uVar7;
      ^
      ;
lbm.c:282:3: error: use of undeclared identifier 'uint'; did you mean 'rint'?
  uint uVar7;
  ^~~~
  rint
/usr/include/math.h:319:13: note: 'rint' declared here
double      rint(double);
            ^
lbm.c:282:8: error: use of undeclared identifier 'uVar7'
  uint uVar7;
       ^
lbm.c:306:31: error: use of undeclared identifier 'DAT_00405f78'
  for ( local_8c = 0; dVar5 = DAT_00405f78,  dVar4 = DAT_00405f70,  dVar3 = DAT_00405f68, 
                              ^
lbm.c:306:54: error: use of undeclared identifier 'DAT_00405f70'
  for ( local_8c = 0; dVar5 = DAT_00405f78,  dVar4 = DAT_00405f70,  dVar3 = DAT_00405f68, 
                                                     ^
lbm.c:306:77: error: use of undeclared identifier 'DAT_00405f68'
  for ( local_8c = 0; dVar5 = DAT_00405f78,  dVar4 = DAT_00405f70,  dVar3 = DAT_00405f68, 
                                                                            ^
lbm.c:307:15: error: use of undeclared identifier 'DAT_00405f48'
      dVar2 = DAT_00405f48,  dVar1 = DAT_00405f40,  local_8c < 200000; local_8c = local_8c + 0x14) {
              ^
lbm.c:307:38: error: use of undeclared identifier 'DAT_00405f40'
      dVar2 = DAT_00405f48,  dVar1 = DAT_00405f40,  local_8c < 200000; local_8c = local_8c + 0x14) {
                                     ^
lbm.c:308:14: warning: call to undeclared function 'ZEXT816'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    auVar6 = ZEXT816( ( unsigned long)DAT_00405f48);
             ^
lbm.c:308:39: error: use of undeclared identifier 'DAT_00405f48'
    auVar6 = ZEXT816( ( unsigned long)DAT_00405f48);
                                      ^
lbm.c:309:13: error: use of undeclared identifier 'DAT_00405fa8'
    dVar9 = DAT_00405fa8 *
            ^
lbm.c:326:53: error: use of undeclared identifier 'DAT_00405fb8'
    dVar10 = ( double)( ( local_8c / 0x14) % 100) / DAT_00405fb8 - DAT_00405f68;
                                                    ^
lbm.c:326:68: error: use of undeclared identifier 'DAT_00405f68'
    dVar10 = ( double)( ( local_8c / 0x14) % 100) / DAT_00405fb8 - DAT_00405f68;
                                                                   ^
lbm.c:327:62: error: use of undeclared identifier 'DAT_00405fb8'
    dVar11 = ( double)( ( ( local_8c / 0x14) / 100) % 100) / DAT_00405fb8 - DAT_00405f68;
                                                             ^
lbm.c:327:77: error: use of undeclared identifier 'DAT_00405f68'
    dVar11 = ( double)( ( ( local_8c / 0x14) / 100) % 100) / DAT_00405fb8 - DAT_00405f68;
                                                                            ^
lbm.c:328:31: error: use of undeclared identifier 'DAT_00405f68'
    dVar11 = DAT_00405fb0 * ( DAT_00405f68 - dVar10 * dVar10) * ( DAT_00405f68 - dVar11 * dVar11);
                              ^
lbm.c:328:14: error: use of undeclared identifier 'DAT_00405fb0'
    dVar11 = DAT_00405fb0 * ( DAT_00405f68 - dVar10 * dVar10) * ( DAT_00405f68 - dVar11 * dVar11);
             ^
lbm.c:328:67: error: use of undeclared identifier 'DAT_00405f68'
    dVar11 = DAT_00405fb0 * ( DAT_00405f68 - dVar10 * dVar10) * ( DAT_00405f68 - dVar11 * dVar11);
                                                                  ^
lbm.c:329:14: error: use of undeclared identifier 'DAT_00405fa0'
    dVar10 = DAT_00405fa0 * ( dVar11 * dVar11 + 0.0);
             ^
lbm.c:330:50: error: use of undeclared identifier 'DAT_00405f68'
    srcGrid[local_8c] = DAT_00405f50 * dVar9 * ( DAT_00405f68 - dVar10);
                                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
